[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Main.gd" type="Script" id=2]
[ext_resource path="res://Scene/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Plane.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )
plane_scene = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.537255, 0.588235, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 400, 432 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="PlaneTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="hit" from="Player" to="." method="_on_Player_hit_gameover"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="PlaneTimer" to="." method="_on_PlaneTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
