[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scene/Controller.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/VectorsStorage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Script/Main.gd" type="Script" id=4]
[ext_resource path="res://Scene/Map.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/UI.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 4 )
scalar = 64

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0, 0.654902, 1 )

[node name="Controller" parent="." instance=ExtResource( 1 )]

[node name="VectorsStorage" parent="." instance=ExtResource( 3 )]

[node name="PrintoutTimer" type="Timer" parent="."]
autostart = true

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="UI" parent="." instance=ExtResource( 6 )]

[connection signal="confirm" from="Controller" to="." method="_on_Controller_confirm"]
[connection signal="down" from="Controller" to="VectorsStorage" method="_on_Controller_down"]
[connection signal="left" from="Controller" to="VectorsStorage" method="_on_Controller_left"]
[connection signal="right" from="Controller" to="VectorsStorage" method="_on_Controller_right"]
[connection signal="up" from="Controller" to="VectorsStorage" method="_on_Controller_up"]
[connection signal="timeout" from="PrintoutTimer" to="." method="_on_PrintoutTimer_timeout"]
[connection signal="end_game" from="Map" to="." method="_on_Map_end_game"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="start_game" from="UI" to="." method="_on_UI_start_game"]
